# capital-market-brazil

./: .gitignore  mkdocs.yml  pyproject.toml  run.py
capital_market_brazil/aquisicao/: base_etl.py  configs.py  options.py
capital_market_brazil/aquisicao/b3/: base_cotacao_b3.py
docs/: index.md
notebooks/: ETL_Cotacao_B3.ipynb  ETL_Dados_Publicos.ipynb
