[tool.poetry]
name = "capital-market-brazil"
version = "0.1.0"
description = ""
authors = ["Victor Vilela <victor_vilel@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pandas = "^2.2.2"
xlrd = "^2.0.1"
bs4 = "^0.0.2"
selenium = "^4.23.1"
webdriver-manager = "^4.0.2"
httplib2 = "^0.22.0"
wget = "^3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.13.0"
ipykernel = "^6.29.5"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.31"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[too.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
test = "pytest -s -x --cov=capital_market_brazil -vv"
post_test = "coverage html"